k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miapp
  template:
    metadata:
      labels:
        app: miapp
    spec:
      containers:
        - name: miapp-container
          image: lilo2024/encuestapp:latest
          ports:
            - containerPort: 8080
