k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miapp-service
spec:
  selector:
    app: miapp
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
