k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miapp-ingress
  namespace: default
  annotations: {}
spec:
  rules:
  - host: encuestapp.com
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: miapp-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miapp-service
            port:
              number: 8080
